Fix Docusaurus style - Fix dark theme blockquote color contrast (#732)
* Fix dark theme blockquote color contrast

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -80,7 +80,6 @@ blockquote {
 
 html[data-theme='dark'] blockquote {
   border-left-color: var(--ifm-color-primary);
-  color: #000;
 }
 
 .docusaurus-highlight-code-line {
